Today, I deployed a gateway service using internal tokens to authenticate microservices within the same network.